<resources>
    <string name="app_name">YogiRProduct</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Customer</string>
    <string name="tab_text_2">Contractor</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign up</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="remember_me">Remember me</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="re_enter_password_text">Re-enter Password</string>
    <string name="register_text">Register</string>
    <string name="phone_number_text">Phone number</string>
    <string name="member_text">You are not a member? Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="company_name_text">Company name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_history">History</string>
    <string name="nav_ongoing">Ongoing</string>
    <string name="nav_profile">Profile</string>
    <string name="service">Service</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full name</string>
    <string name="edit_personal_information">Edit personal information</string>
    <string name="manage_address">Manage address</string>
    <string name="two_factor_authentication">Two factor authentication</string>
    <string name="customer_support">Customer support</string>
    <string name="manage_password">Manage password</string>
    <string name="profile_logout">Logout</string>
    <string name="personal_information">Manage Personal information</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="customer_name">Customer Name</string>
    <string name="add_address">Add address</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="city_state">City, State</string>
    <string name="save">Save</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="change_password">Change password</string>
    <string name="submit_text">Submit</string>
    <string name="back">Back</string>
    <string name="update_now">Update Now</string>
    <string name="about_yogi_r">About Yogi R</string>
    <string name="products_and_services">Products and services</string>
    <string name="support">Support</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_service">Select Service</string>
    <string name="next">Next</string>

    <string-array name="sortArray">
        <item>"Sort By"</item>
        <item>"Rating"</item>
        <item>"Category"</item>
        <item>"Specialize"</item>

    </string-array>

    <string-array name="selectorArray">
        <item>"Selector"</item>
        <item>"Electrician"</item>
        <item>"Carpenter"</item>
        <item>"Plumber"</item>

    </string-array>

</resources>
