<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignUp.CustomerCompleteSignUpFragment"
    tools:layout_editor_absoluteY="25dp">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ContraintPractise">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textBlackColor"
            app:layout_constraintBottom_toTopOf="@+id/addressOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="379dp"
                android:id="@+id/editCustomerName"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/customer_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="28dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textBlackColor"
            app:layout_constraintBottom_toTopOf="@+id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressOne">

            <EditText
                android:layout_width="379dp"
                android:id="@+id/editAddressTwo"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address_line_2"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="172dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/addressOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textBlackColor"
            app:layout_constraintBottom_toTopOf="@+id/addressTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerName">

            <EditText
                android:id="@+id/editAddressOne"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:hint="@string/address_line_1"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="100dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round_shape"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/loginWhiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pincode" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textBlackColor"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/addAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state">

            <EditText
                android:id="@+id/editPincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textBlackColor"
            app:layout_constraintBottom_toTopOf="@+id/state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressTwo">

            <EditText
                android:id="@+id/editCity"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="244dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/textBlackColor"
            app:layout_constraintBottom_toTopOf="@+id/pincode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city">

            <EditText
                android:id="@+id/editState"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteY="316dp" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>